--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,3 @@
-<app-table></app-table>
 <!-- <app-button></app-button> -->
 <!-- <app-typography></app-typography> -->
 <!-- <app-button-toggle></app-button-toggle> -->
@@ -8,3 +7,20 @@
 <!-- <app-toolbar></app-toolbar> -->
 <!-- <app-sidenav></app-sidenav> -->
 <!-- <app-menu></app-menu> -->
+<!-- <app-list></app-list> -->
+<!-- <app-grid></app-grid> -->
+<!-- <app-expansionpanel></app-expansionpanel> -->
+<!-- <app-card></app-card> -->
+<!-- <app-tabs></app-tabs> -->
+<!-- <app-stepper></app-stepper> -->
+<!-- <app-input></app-input> -->
+<!-- <app-select></app-select> -->
+<!-- <app-autocomplete></app-autocomplete> -->
+<!-- <app-checkbox></app-checkbox> -->
+<!-- <app-radiobutton></app-radiobutton> -->
+<!-- <app-datepicker></app-datepicker> -->
+<!-- <app-tooltip></app-tooltip> -->
+<!-- <app-snackbar></app-snackbar> -->
+<!-- <app-dialog></app-dialog> -->
+<!-- <app-table></app-table> -->
+<app-scrolling></app-scrolling>
